fix lastName class in form not showing up in survey results

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 .jumbotron {
-
+  margin: 5px;
+  border: 2px #94b7ef;
+  padding: 4px;
 }
-
-
 .jumbotron h1{
   text-align: left;
 }
@@ -12,13 +12,16 @@
 img.logo {
   float:right;
 }
-#formSurvey{
-  border: 3px;
-  background-color: #679bef;
+.formbox {
+  border: 10px;
   border-color: black;
-  padding: 5%;
 }
-
+#formSurvey{
+  margin: 5px;
+  border: 2px black;
+  background-color: #a3c6ff;
+  padding: 20px;
+}
 #webdesigner{
   display: none;
 }
